# positronic-membrane

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  LICENSE  README.md  alembic.ini  docker-compose.yml  multi_party_continuity_plan.md  pyproject.toml  requirements.txt  setup.sh
.claude/: settings.json
.github/workflows/: ci.yml
benchmarks/: __init__.py  conversation_runner.py  judge.py  metrics_window.py  run.py  sandbox.py  scoring.py
benchmarks/baselines/: v1.example.json  v1.json
benchmarks/scenarios/: memory_recall.py  refusal_escalation.py  registry.py  slash_commands.py  voice_integrity.py
docs/: cloud_operations_guide.md  decoupled_development_and_skills.md  deployment_guide.md  future_roadmap.md  gemini_md_specification.md  gemini_md_workflows.md  manifesto.md  ollama_setup.md  pre_cloud_multi_party_hardening.md  restore_runbook.md  successor_spec.md  threat_model.md  user_guide.md  v1_foundations_roadmap.md  v1_roadmap_consolidated.md  v2_roadmap.md  v2_roadmap_consolidated.md
docs/archive/: future_roadmap.md  janus_roadmap.md  sandbox_roadmap.md
schema/: postgres_schema.sql
scripts/: audit_agent_routing.py  backup_db.py  cleanup_curiosity_pollution.py
src/: __init__.py  agent_handoff.py  agent_sync.py  auth.py  codebase.py  config.py  daemon.py  database.py  epistemic.py  explorer.py  external_context_loader.py  llm.py  logging_config.py  main.py  memory.py  memory_hydration.py  memory_orchestrator.py  metrics.py  middleware.py  notifications.py  persona.py  pr_review.py  prompt_registry.py  regression_watcher.py  role_bootstrap.py  sandbox.py  sandbox_session.py  security.py  self_modification.py  setup_wizard.py  skill_harness.py  skills.py  watcher.py  web_server.py
src/api/: multiparty.py
src/migrations/: 002_add_multiparty.sql  003_pg_setup.sql  env.py  sqlite_migration_multiparty.sql
src/migrations/versions/: baseline_baseline_schema_initialization.py
src/routers/: __init__.py  auth.py  chat.py  constitution.py  dependencies.py  goals.py  governor.py  health.py  metrics.py  sandbox.py
src/static/: app.js  index.html  style.css
tests/: __init__.py  conftest.py  test_agent_handoff.py  test_agent_rules.py  test_agent_sync.py  test_amendments.py  test_ast_verification.py  test_autonomous_chat.py  test_backup.py  test_benchmarks_conversation_runner.py  test_benchmarks_judge.py  test_benchmarks_metrics_window.py  test_benchmarks_run_integration.py  test_benchmarks_run_layer1.py  test_benchmarks_scenarios.py  test_benchmarks_scoring.py  test_circuit_breaker.py  test_codebase.py  test_config.py  test_daemon.py  test_database.py  test_database_postgres.py  test_disputes.py  test_document_memory.py  test_epistemic.py  test_explorer.py  test_explorer_epistemic.py  test_external_context_loader.py  test_friction_reduction.py  test_github_integration.py  test_goals.py  test_governor.py  test_health.py  test_json_tool_calling.py  test_llm.py  test_logging_config.py  test_memory.py  test_middleware.py  test_multi_file_staging.py  test_multiparty.py  (+30 more)
tests/e2e/: conftest.py  test_auth_flow.py  test_daemon_cycle.py  test_full_chat_flow.py  test_sandbox_e2e.py
tests/fixtures/skills_library/: registry.json
tests/fixtures/skills_library/skills/: checkout_db_to_draft.py  cleanup_episodic_memory.py  cleanup_llm_cache.py  commit_draft_to_db.py  consolidate_memories.py  decay_self_model.py  delete_db_document.py  delete_draft_file.py  document_memory.py  echo_message.py  evaluate_drives.py  evaluate_goals.py  execute_code.py  fetch_url.py  github_integration.py  ingest_fact.py  list_draft_files.py  manage_sandbox.py  propose_goals.py  read_codebase.py  read_draft_file.py  run_reflection_cycle.py  scan_workspace.py  spawn_agent.py  test_run_reflection_cycle.py  web_search.py  write_draft_file.py
