[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-janus"
version = "1.0.1"
description = "Swarm AI experimentation and local autonomous agent daemon orchestration"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Project Janus Authors"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "chromadb>=0.4.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "python-jose[cryptography]>=3.3.0",
    "websockets>=11.0.0",
    "cryptography>=41.0.0",
    "psycopg2-binary>=2.9.0",
    "boto3>=1.34.0",
    "alembic>=1.12.0",
    "neo4j>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.scripts]
janus-cli = "src.main:main"
janus-server = "src.web_server:run_server"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
markers = [
    "e2e: slow end-to-end tests exercising real subprocess/git/sqlite/vector-db integration — excluded from a bare pytest run by default.",
]
addopts = "-m 'not e2e'"

[tool.ruff]
line-length = 160
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
]
ignore = []

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "src.routers.dependencies.require_role"]

[tool.ruff.lint.per-file-ignores]
"tests/fixtures/skills_library/**" = ["F821"]
"src/web_server.py" = ["E402"]
"src/migrations/env.py" = ["E402"]

